          Ammo destroyed by flooding is now set to 0 rounds in addition
          to disabling the slot. (Fitz)
	* The 'stand anyway' command has been fixed to behave as
	  expected. (Fitz)
	* Jumping mechs can no longer see or be seen on seismic 
          sensors. (Fitz)
	* When a unit is in TSM mode it should get correct extra
	  heat for the speed its currently at.

btonline-btechmux 0.4:
	- Changes
	* Merged with the unstable branch's revision #38 + the patch
	  for @restart and the rbtree. Includes some updates to the 
	  event code including the need for libevent to be installed 
	  on the system. (Dany)
	* Changed btech_tl3_charge to default on. (Dany)
	* Added btech_use_tech_bsuit config parameter with default on.
	  When enabled it uses the Technician-BSuit skill for fixing
	  BattleSuits, if off uses Technician-Battlemech. (Dany)
	* Replaced the select() loop in bsd.c with Niels Provos' 
	  libevent system. Libevent is now necessary. (Martin Murray)
	* Renamed the mux event system muxevent to prevent collisions
	  with libevent functions. (Martin Murray)
	* Added HIDDEN flag to status and scan so you can tell if a
	  unit is hidden. (Dany)
	* Changed how AIs do physical attacks. Physical weapon attacks 
	  first, then kicking and finally they try to punch. (Dany)
	* Can no longer DFA airborne targets. (Dany)
	* Tanks can now charge 'ram' other tanks.
	* Added TL3 FASA charge rules. Can be enabled/disabled by
	  adding btech_tl3_charge 1 or 0 to the MUX config file. (Dany)
	* Changed the charge distance recoder to record actual distance
	  traveled instead of number of hexes entered. Fixed a cheat
	  were a unit traveling 0/180 could double their charge
	  distance. (Dany)
	* Changes to the SQL Stuff, Cleaning up some of the SQL Code
	  made it more readable. (Dany)
	* Added the ability to specify the port number as well as the
	  unix socket for the mysql database. (Dany)
	* Made a compile time flag NO_SQLSLAVE. If you define this